# IterativeClosestPoint

./: CMakeLists.txt  GlutExaminer.cc  GlutExaminer.hh  GlutViewer.cc  GlutViewer.hh  README.md  Registration.cc  RegistrationViewer.cc  RegistrationViewer.hh  gl.hh  registrationview.cc
cmake/: FindFreeGLUT.cmake  FindOpenMesh.cmake
